feat: adicionado controle de acesso por grupo com painéis separados, autenticação e cadastro de usuários

--- a/app/app_order/templates/app_order/login.html
+++ b/app/app_order/templates/app_order/login.html
@@ -19,6 +19,7 @@
 
         <form method="post">
           {% csrf_token %}
+          <input type="hidden" name="next" value="{{ next }}" />
 
           <div class="mb-3">
             <label for="username" class="form-label">Usuário</label>
