Remoção de fotos e atualizado concluir_os.html para aparecer numero da OS no lugar do ID

--- a/app/app_order/templates/app_order/concluir_os.html
+++ b/app/app_order/templates/app_order/concluir_os.html
@@ -10,7 +10,7 @@
   </head>
   <body class="bg-light">
     <div class="container mt-5" style="max-width: 600px">
-      <h3 class="mb-3">Concluir Ordem de Serviço #{{ os.id }}</h3>
+      <h2>Concluir Ordem de Serviço nº {{ os.numero_os }}</h2>
 
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
