--- a/app/app_order/templates/app_order/login.html
+++ b/app/app_order/templates/app_order/login.html
@@ -11,7 +11,7 @@
   <body class="bg-light">
     <div class="container mt-5" style="max-width: 400px">
       <div class="card p-4 shadow-sm">
-        <h4 class="mb-4 text-center">Acessar o sistema</h4>
+        <h4 class="mb-4 text-center">Acessar</h4>
 
         {% if messages %} {% for message in messages %}
         <div class="alert alert-danger">{{ message }}</div>
