Up: Ajuste no redirecionamento (ir para o início).

--- a/app/app_order/templates/app_order/os_sucesso.html
+++ b/app/app_order/templates/app_order/os_sucesso.html
@@ -54,7 +54,7 @@
         Histórico de Ordens
       </a>
       <a
-        href="{% url 'solicitar_os' %}"
+        href="{% url 'painel_funcionario' %}"
         class="btn btn-primary w-100 w-md-auto"
       >
         Ir para início
