--- a/app/app_order/templates/app_order/base.html
+++ b/app/app_order/templates/app_order/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Juma OS{% endblock %}</title>
-
+    {% load static %}
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -14,6 +14,11 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
       rel="stylesheet"
+    />
+    <!-- Timeline CSS -->
+    <link
+      rel="stylesheet"
+      href="{% static 'app_order/css/timeline.css' %}"
     />
 
     <style>
@@ -59,7 +64,7 @@
           class="navbar-brand d-flex align-items-center gap-2"
           href="{% url 'painel_funcionario' %}"
         >
-          <i class="bi bi-tools fs-4"></i>
+          <i class="bi bi-rocket"></i>
           <div class="d-flex flex-column lh-sm">
             <span class="fw-semibold">Juma OS</span>
             <small class="text-white-50">Gestão de Ordens de Serviço</small>
