--- a/app/app_order/templates/app_order/painel_funcionario.html
+++ b/app/app_order/templates/app_order/painel_funcionario.html
@@ -41,7 +41,7 @@
         <!-- Sidebar lateral -->
         <nav class="col-md-3 col-lg-2 d-md-block sidebar p-3">
           <h4 class="mb-4">
-            <i class="bi bi-tools"></i> Juma OS
+            <i class="bi bi-rocket-takeoff"></i> Juma OS
             <div class="fs-6 text-white-50">Gestão de Ordens de Serviço</div>
           </h4>
           <ul class="nav flex-column">
