Altera nome na linha 110

--- a/app/app_order/templates/app_order/login.html
+++ b/app/app_order/templates/app_order/login.html
@@ -107,7 +107,7 @@
 
       <!-- Link credit -->
       <div class="footer-credit text-center">
-        Desenvolvidor por <a href="https://github.com/Victoryusz" target="_blank">Victor Hugo</a>
+        Desenvolvidor por <a href="https://github.com/Victoryusz" target="_blank">vick1st</a>
       </div>
     </div>
 
