Alterações nos titulos da pagina Minhas OS , Ordens criadas por mim, Ordens que participei...

--- a/app/app_order/templates/app_order/listar_os_funcionario.html
+++ b/app/app_order/templates/app_order/listar_os_funcionario.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-4">
-  <h2>Minhas OS em Andamento</h2>
+  <h2>Ordens em Andamento...</h2>
   {% if etapas %}
     <ul class="list-group mt-3">
       {% for st in etapas %}
@@ -41,7 +41,7 @@
 
   <hr class="my-4">
 
-  <h2>OS Criadas por mim</h2>
+  <h2>Ordens criadas por mim</h2>
   {% if criadas %}
     <div class="table-responsive">
       <table class="table table-striped mt-2">
@@ -79,7 +79,7 @@
     </div>
   {% endif %}
 
-  <h2 class="mt-4">OS que colaborei</h2>
+  <h2 class="mt-4">Ordens que participei</h2>
   {% if contribui %}
     <div class="table-responsive">
       <table class="table table-striped mt-2">
